[package]
name = "bitbucket_server_cli"
version = "0.3.15"
authors = ["Jens Brimfors <jens.brimfors@gmail.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A CLI for cloning and updating entire projects from bitbucket server"
repository = "https://github.com/jensim/bitbucket_server_cli/"
homepage = "https://github.com/jensim/bitbucket_server_cli/"
documentation = "https://github.com/jensim/bitbucket_server_cli/blob/master/README.md"
keywords = ["cli", "bitbucket", "git", "clone"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
generic_error = "0.1"
structopt = "0.3"
clap = "2.33"
indicatif = "0.15"
pickledb = "0.4"
dialoguer = "0.6"
atomic-counter = "1.0"
parse_duration = "2.1"

[dev-dependencies]
tokio-test = "0.2.1"
rand = "0.7.3"

[badges]
travis-ci = { repository = "jensim/bitbucket_server_cli", branch = "master" }
maintenance = { status = "experimental" }
