[package]
name = "bitbucket_server_cli"
version = "0.3.16-dev"
authors = ["Jens Brimfors <jens.brimfors@gmail.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A CLI for cloning and updating entire projects from bitbucket server"
repository = "https://github.com/jensim/bitbucket_server_cli/"
homepage = "https://github.com/jensim/bitbucket_server_cli/"
documentation = "https://github.com/jensim/bitbucket_server_cli/blob/master/README.md"
keywords = ["cli", "bitbucket", "git", "clone"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
futures = "0.3.12"
tokio = { version = "1.0.2", features = ["full"] }
generic_error = "0.2.0"
structopt = "0.3.21"
clap = "2.33.3"
indicatif = "0.15.0"
pickledb = "0.4.1"
dialoguer = "0.7.1"
atomic-counter = "1.0.1"
parse_duration = "2.1.0"

[dev-dependencies]
tokio-test = "0.4.0"
rand = "0.8.2"

[badges]
travis-ci = { repository = "jensim/bitbucket_server_cli", branch = "master" }
maintenance = { status = "experimental" }
