[package]
name = "bitbucket_server_cli"
version = "0.4.5"
authors = ["Jens Brimfors <jens.brimfors@gmail.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A CLI for cloning and updating entire projects from bitbucket server"
repository = "https://github.com/jensim/bitbucket_server_cli/"
homepage = "https://github.com/jensim/bitbucket_server_cli/"
documentation = "https://github.com/jensim/bitbucket_server_cli/blob/main/README.md"
keywords = ["cli", "bitbucket", "git", "clone"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12", features = ["full"] }
generic_error = "0.2"
structopt = "0.3"
clap = "4.0"
indicatif = "0.16"
pickledb = "0.4"
dialoguer = "0.9"
atomic-counter = "1.0"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[badges]
travis-ci = { repository = "jensim/bitbucket_server_cli", branch = "main" }
maintenance = { status = "experimental" }
